fix overflow

--- a/frontend/src/app/components/map/map.component.css
+++ b/frontend/src/app/components/map/map.component.css
@@ -5,10 +5,10 @@
   right: 0;
   bottom: 0;
   margin: 6vh 1vw 2vh 5vw;
+  border: 2px solid black;
 }
 
 .map-frame {
-  border: 2px solid black;
   height: 100%;
 }
 
@@ -23,10 +23,12 @@
   right: 70%;
   bottom: 0;
   margin: 6vh 1vw 2vh 2vw;
+  overflow-y: auto;
+  border: 2px solid black;
 }
 
 .control-frame {
-  border: 2px solid black;
+  /*border: 2px solid black;*/
   height: 100%;
 }
 
